Fix name for UKM parse start metric.

BUG=698816

Review-Url: https://codereview.chromium.org/2736773002
Cr-Commit-Position: refs/heads/master@{#454966}

Former-commit-id: 15bfa34181b01fc1bbf0cb20a55ba38e1edb6fb8