chrome/browser/page_load_metrics/observers/ukm_page_load_metrics_observer.cc
@@ -11,7 +11,7 @@
 namespace internal {
 
 const char kUkmPageLoadEventName[] = "PageLoad";
-const char kUkmParseStartName[] = "ParseTiming.ParseStart";
+const char kUkmParseStartName[] = "ParseTiming.NavigationToParseStart";
 const char kUkmDomContentLoadedName[] =
     "DocumentTiming.NavigationToDOMContentLoadedEventFired";
 const char kUkmLoadEventName[] = "DocumentTiming.NavigationToLoadEventFired";
